# fboot

./: .gitignore  README.md  TODO.md  build.sh  fbootd.toml.example
.github/workflows/: release.yml
fboot/: .env.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
fboot/src/: App.tsx  index.css  main.tsx
fbootd/: .env.example  .gitignore  Cargo.toml  build.rs
fbootd/migrations/: 0001_init.sql  0002_two_macs_and_defaults.sql  0003_bootable_file_size.sql  0004_boot_config_ipxe_script.sql  0005_kernel_param_split.sql  0006_optional_primary_mac.sql  0007_optional_ipmi_mac.sql  0008_cache.sql
fbootd/src/: app_state.rs  config.rs  console.rs  error.rs  events.rs  frontend.rs  ipxe.rs  lib.rs  main.rs
fbootd/src/adapters/: mod.rs
fbootd/src/adapters/arp/: cached.rs  null.rs  parse.rs  proc.rs
fbootd/src/adapters/blob/: fs.rs
fbootd/src/adapters/db/: boot_config.rs  boot_defaults.rs  bootables.rs  cache.rs  mod.rs  servers.rs  stats.rs
fbootd/src/adapters/ipmi/: ipmitool.rs  mock.rs
fbootd/src/adapters/scanner/: default.rs  null.rs
fbootd/src/api/: boot.rs  bootables.rs  cache.rs  console.rs  defaults.rs  migration.rs  mod.rs  scan.rs  servers.rs  servers_io.rs  stats.rs  ws.rs
fbootd/src/domain/: boot.rs  bootable.rs  ipmi.rs  mac.rs  mod.rs  scan.rs  server.rs  stats.rs  status.rs
fbootd/src/mcp/: mod.rs
fbootd/src/ports/: arp.rs  blob.rs  cache.rs  ipmi.rs  mod.rs  repo.rs  scanner.rs
fbootd/src/services/: http_boot.rs  mod.rs  proxydhcp.rs  tftp.rs
fbootd/src/tasks/: arp_task.rs  mod.rs  stats_task.rs  status_task.rs
packaging/deb/: build-deb.sh  fbootd.service  fbootd.toml  (+3 more)
(+66 files in other folders)
