[package]
name = "fbootd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-tftp = "0.4.2"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["ws", "multipart"] }
base64 = "0.22.1"
bytes = "1.12.0"
chrono = { version = "0.4.45", default-features = false, features = ["serde", "clock", "std"] }
dhcproto = "0.15.0"
dotenvy = "0.15.7"
futures = "0.3.32"
hickory-resolver = "0.26.1"
mac_oui = { version = "0.4.11", features = ["with-db"] }
mime_guess = "2.0.5"
pnet_datalink = "0.35.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream", "json", "charset", "http2"] }
rmcp = { version = "1.8.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
rust-embed = { version = "8", features = ["debug-embed"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
socket2 = "0.6.4"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "sqlite", "macros", "chrono", "uuid", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "0.9"
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["cors", "trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }

[features]
frontend = ["dep:rust-embed"]
